fix issue with em units triggering scrollbars on resize

--- a/CancerGov/_src/Scripts/NCI/Modules/modal/_modal.scss
+++ b/CancerGov/_src/Scripts/NCI/Modules/modal/_modal.scss
@@ -84,11 +84,12 @@
   background-color: transparent;
   border: none;
   min-height: 28px;
+  &:first-child {
+    margin-bottom: 10px;
+  }
 }
 
 .modal__content {
-	margin-top: 1em;
-  margin-bottom: 1em;
   padding: 0 20px;
   line-height: 1.5;
   overflow-y: auto;
